controls/TextControl/TextControl.css
.textControl
{
    padding:       0;
    /* width:      74px; */
    /* height:     20px; */
    overflow:      visible;
    text-align:    center;
    touch-action:  none;
    /* box-shadow:    0 0 0 1px orange inset; */
}    


.figma-dark .textControl
{
    background-color: rgba(56, 56, 56, 0.95);
}


.figma-light .textControl
{
    background-color: rgba(255, 255, 255, 0.95);
}


.textControlTextarea
{
    color:                var(--figma-color-text);

    font-family:          Inter;
    font-size:            11;
    position:             absolute;
    left:                 0px;
    top:                  0px;
    /* left:                 50%; */
    /* transform:            translateX(-50%); */
    width:                100%;
    background-color:     transparent;
    z-index:              20000;

    border:               none;
    overflow:             auto;
    outline:              none;

    -webkit-box-shadow:   none;
    -moz-box-shadow:      none;
    box-shadow:           none;

    resize:               none;
    /* pointer-events:       none; */

    border-radius:        0.5px;
    
    /* box-shadow:           0 0 0 1px inset red; */
}


.textControlTextarea:focus
{
    outline: 2px solid var(--figma-color-bg-brand);
}


.textControlTextarea::-webkit-scrollbar
{
    background:   transparent;
    width:        6px;
    /* box-shadow:   0 0 0 1px red inset; */
}


.textControlTextarea::-webkit-scrollbar-track
{
    border: 4px solid transparent;
    margin: 2px 0px 2px 0;
}


.textControlTextarea::-webkit-scrollbar-thumb
{
    background:    #fff4;
    border:        4px solid transparent;
    border-radius: 3px;
    cursor:        default;
    pointer-events: none;
}


/* .textControlTextarea:focus
{
    outline: 1px solid var(--figma-color-brand);
} */


.textControlFocus
{
    position:       absolute;
    pointer-events: none;
    box-shadow:     0 0 0 1px var(--activeObjectColor) inset;
    visibility:     hidden;
    opacity:        0;
    /* z-index:        1100; */
}

